<resources>
    <string name="app_name">PromoBeerApp</string>

    <string name="notifications">Notificações</string>
    <string name="filter">Filtros</string>
    <string name="publishedDate">Publicado:</string>
    <string name="brand">Marca*:</string>
    <string name="type">Tipo*:</string>
    <string name="size">Tamanho*:</string>
    <string name="price">Quanto custa?*:</string>
    <string name="expire_product">Qual validade do Produto?</string>
    <string name="address">Endereço*:</string>
    <string name="description">Descrição:</string>
    <string name="select">Selecione</string>
    <string name="dateStart">__/__/__</string>
    <string name="price_start">R$</string>
    <string name="order_by">Ordenar por:</string>
    <string name="date">Data</string>
    <string name="order_date">data</string>
    <string name="order_price">preço</string>
    <string name="apply_filter">Filtrar</string>
    <string name="clear">LIMPAR</string>
    <string name="register">CADASTRAR</string>
    <string name="navigation_drawer_open" />
    <string name="navigation_drawer_close" />
    <string name="exit">Sair</string>
    <string name="info">Informações</string>
    <string name="terms">Termos de Uso</string>
    <string name="no_possible_to_connect">Você está offline e por isso não foi possível atulizar a lista de promoções. Verifique sua conxão.</string>
    <string name="check_your_conection">Sem conexão com a Internet</string>
    <string name="try_again_when_online">Tente novamente quando tiver online</string>
    <string name="try_again">TENTAR NOVAMENTE</string>
    <string name="loading_promo_list">Carregando Promoções...</string>
    <string name="loading_product_size_list">Carregando tamanhos da cerveja...</string>
    <string name="loading_product_type_list">Carregando tipos de cerveja...</string>
    <string name="loading_product_brand_list">Carregando marcas de cerveja...</string>
    <string name="no_promo_found">Nenhuma promoção foi encontrada.</string>
    <string name="try_again_later">Verifique os filtros aplicados ou tente novamente mais tarde.</string>
    <string name="facebook_app_id">2124105444297210</string>
    <string name="fb_login_protocol_scheme">fb2124105444297210</string>


    <string name="request_client_id">991438331-bv1ludgpm49oqdh7tb7q05pcclo5snc6.apps.googleusercontent.com</string>
    <string name="firebase_app_id">promobeerapp-8bc90</string>
    <string name="register_please">Para cadastrar uma promoção, por favor se registre.</string>
    <string name="choice_product_brand">Vamos começar, escolha a marca da cerveja</string>
    <string name="choice_product_type">Agora, escolha o estilo da cerveja.</string>
    <string name="choice_product_material">É garrafa ou lata?</string>
    <string name="choice_product_size_can">Qual o tamanho da lata?</string>
    <string name="choice_product_size_bottle">Qual o tamanho da garrafa?</string>
    <string name="problem_server_connection">Sua requisição não foi processada. Tente novamente mais tarde.</string>
    <string name="error">Erro.</string>
    <string name="google_maps_id">AIzaSyB5Cb2Kl4X5AsezToLHNf0bS5FTQ3SAo7o</string>
    <string name="rank_by_distance">distance</string>
    <string name="type_supermarket">supermarket</string>
    <string name="choice_supermarket">ESCOLHA O SUPERMERCADO</string>
    <string name="loading_address_list">Carregando supermercados...</string>
    <string name="enable_location">Ative sua localização</string>
    <string name="location_off">Sua localização está desabilitada.\\nPor favor, habilite sua localização para \" + \"utilizar esse aplicativo\"</string>
    <string name="location_settings">Configurações</string>
    <string name="cancel">Cancelar</string>

    <string name = "permission_rationale"> A permissão de detectar localização é necessária para cadastro da promoção </string>
    <string name = "permission_denied_explanation"> A permissão foi negada, mas é necessária para o cadastro da promoção. </string>
    <string name="settings">Configuração</string>
    <string name="no_product_with_this_size">Nenhuma cerveja encontrada.</string>
    <string name="check_product">Confira a cerveja da promoção:</string>
    <string name="beer">Cerveja</string>
    <string name="check_location">Qual supermercado?</string>
    <string name="register_promo">Cadastrar Promoção</string>
    <string name="add_photo_please">Por favor, adiciona uma foto da promoção</string>
    <string name="loadingSupermarket">Carregando supermercados mais próximos...</string>
    <string name="storage_permission_rationale_title">Precisa de permissões</string>
    <string name="storage_permition_rationale_message">Este aplicativo precisa de permissão para usar recurso de câmera. Você pode concedê-los nas configurações do aplicativo.\"</string>
    <string name="storage_permission_denied_message">Aplicativo não poderá pegar suas imagens pois a permissão foi negada.</string>
    <string name="go_settings">IR PARA CONFIGURAÇÕES</string>
    <string name="promo_already_registered">Essa promoção já foi cadastrada. Obrigado pela colaboração.</string>
    <string name="promo_problem_registered">Encontramos um problema no registro da promoção. Tente novamente mais tarde</string>
    <string name="please_add_description">Por favor, adicione uma descrição da promoção</string>
    <string name="please_add_price">Por favor, adicione um valor a promoção</string>
    <string name="please_add_expire_date">Por favor, adicione a data de validae do produto.</string>
    <string name="please_select_establishment">Por favor, adicione o supermercado onde é encontrada a promoção.</string>
    <string name="please_select_correct_product">Por favor, selecione um produto válido.</string>
    <string name="please_take_photo">Por favor, tire uma foto mostrando a promoção.</string>
</resources>


