<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/mainLayout"
            android:padding="@dimen/layout_margin_normal"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/highlight_text"
                android:textSize="@dimen/textsize_big"
                android:layout_marginTop="@dimen/layout_margin_big"
                android:text="@string/choice_product_material"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/layout_margin_normal"
                android:orientation="horizontal"
                >
                <ImageButton
                    android:id="@+id/size1IMG"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:scaleType="center"
                    android:layout_height="95dp"
                    android:background="@drawable/card_default"
                    android:layout_marginEnd="@dimen/layout_margin_normal"
                    android:src="@drawable/ic_bottle_beer_big"
                     />
                <ImageButton
                    android:id="@+id/size2IMG"
                    android:layout_weight="1"
                    android:background="@drawable/card_default"
                    android:layout_width="wrap_content"
                    android:scaleType="center"
                    android:layout_marginStart="@dimen/layout_margin_normal"
                    android:layout_height="95dp"
                    android:src="@drawable/ic_can_beer_big" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/sizeTitleTXV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/highlight_text"
                    android:textSize="@dimen/textsize_big"
                    android:layout_marginTop="@dimen/layout_margin_big"
                    android:text="@string/choice_product_size_bottle"/>
                <ImageView
                    android:layout_marginTop="@dimen/layout_margin_big"
                    android:src="@color/line_list"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp" />


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/productSizeListRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <TextView
                android:id="@+id/feedbackSizeTitleTXV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/title_text"
                android:textSize="@dimen/textsize_big"
                android:text="@string/check_your_conection"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/feedbackLayout"
            android:layout_margin="@dimen/textsize_big"
            android:orientation="vertical"
            android:visibility="gone"

            android:gravity="center">
            <ImageView
                android:id="@+id/feedbackIMG"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_offline"/>
            <TextView
                android:id="@+id/feedbackTitleTXV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/title_text"
                android:textSize="@dimen/textsize_big"
                android:text="@string/check_your_conection"/>
            <TextView
                android:id="@+id/feedbackSubtitleTXV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/line_list"
                android:layout_marginTop="@dimen/layout_margin_normal"
                android:textSize="@dimen/textsize_normal"
                android:text="@string/try_again_when_online"/>
            <Button
                android:id="@+id/tryAgainBTN"
                android:layout_width="180dp"
                android:layout_height="28dp"
                android:layout_marginTop="@dimen/layout_margin_big"
                android:background="?android:attr/selectableItemBackground"
                android:textColor="@color/highlight_text"
                android:textSize="@dimen/textsize_big"
                android:text="@string/try_again"/>

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.SwipeRefreshLayout>

